fullSandbox11072023/force-app/main/default/objects/Business_Unit__c/Business_Unit__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Drives Account Pages and Business Unit Lookup</description>
    <label>Business Unit</label>
</CustomObject>