fullSandbox11072023/force-app/main/default/objects/Business_Unit__c/fields/Auto_Create_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Auto Create</label>
    <type>Checkbox</type>
</CustomField>