fullSandbox11072023/force-app/main/default/objects/Business_Unit__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>