fullSandbox11072023/force-app/main/default/objects/Business_Unit__c/fields/Opportunity_Initial_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Initial_Stage__c</fullName>
    <inlineHelpText>The first stage for each Opportunity Type.</inlineHelpText>
    <label>Opportunity Initial Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>