fullSandbox11072023/force-app/main/default/objects/Business_Unit__c/fields/Opportunity_One_Time_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_One_Time_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity One Time Purchase</label>
    <type>Checkbox</type>
</CustomField>