fullSandbox11072023/force-app/main/default/objects/Business_Unit__c/fields/Pricing_Tiers_Unlocked__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tiers_Unlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked will allow a Business Unit to mix and match across the same tiers.</inlineHelpText>
    <label>Pricing Tiers Unlocked</label>
    <type>Checkbox</type>
</CustomField>