fullSandbox11072023/force-app/main/default/objects/Business_Unit__c/fields/Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Queue_Id__c</fullName>
    <label>Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>