fullSandbox11072023/force-app/main/default/objects/Business_Unit__c/fields/RecordType_Id__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Id__c</fullName>
    <label>Opportunity RecordType Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>