fullSandbox11072023/force-app/main/default/objects/Business_Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Key__c</columns>
    <columns>Page__c</columns>
    <columns>Active__c</columns>
    <columns>RecordType_Id__c</columns>
    <columns>Opportunity_Initial_Stage__c</columns>
    <columns>Auto_Create_Opportunity__c</columns>
    <columns>Opportunity_One_Time_Purchase__c</columns>
    <columns>Pricing_Tiers_Unlocked__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>